- items_control.txt can now have an 'all' option, just like pickupitems.txt.
  Example:
  # Store everything but nippers; keep nippers in inventory
  nipper 0 0 0
  all 0 1 0
- teleportAuto_[hp|sp|minAggressives] will now print a message when it is
  triggered.
- 'drop' command now works when AI is off, if you are only dropping one item.
- 'aiv' command will now indicate whether or not AI is on.

New config options:
- beepOnPM, beepOnChat if set to 1 will generate a beep when you
  hear a PM/public chat message.
- The attackSkillSlot and attackComboSlot blocks now have an extra option:
  isSelfSkill (flag)
  This specifies whether the combo skill is used on yourself.
- _defendMonsters consition, e.g.:
  partySkill Pneuma {
	  lvl 1
      target_defendMonsters Raydric Archer
  }
  will only cast this skill if a Raydric Archer's last attack hit the person.
- verboseDomains is the opposite of squelchDomains.
- missDamage; any damage you do <= this amount will be counted as a miss.
  (e.g. for monks who have Spirit Spheres)
- teleportAuto_useSP if set to 2 will only use SP when other players are 
  present.
- EXPERIMENTAL _misses and _totalMisses conditions, e.g. to switch elemental
  weapons using equipAuto when you are missing a monster that changed
  elements.

New commands:
- ihist
  Display last few entries of the item log.
- move [Portal Number]
  To move into portal if portals exist.

Internal:
- $interface->beep() function for cross-platform beep support.
- OpenKore will exit if a plugin failed to load.
- OpenKore will exit if a configuration file failed to load.
- checkMonsterCondition() now takes a monster hash instead of monster ID.
  (Perhaps other similar functions should be converted too)
- inInventory($item, $quantity = 1) returns 1 iff you have >= $quantity of
  $item in your inventory.

Credits:
- asuwannarat, as2765324: tRO server details.
- MindChild: support for the 'all' option in items_control.txt,
  support for the --storage argument.