@@ -1038,16 +1038,17 @@ sub getSpellName {
 ##
 # inInventory($item, $quantity = 1)
 #
-# Returns 1 if you have at least $quantity units of $item in your inventory.
-# Returns 0 otherwise.
+# Returns $index (can be 0!) if you have at least $quantity units of $item in
+# your inventory.
+# Returns nothing otherwise.
 sub inInventory {
 	my ($item, $quantity) = @_;
 	$quantity ||= 1;
 
 	my $index = findIndexString_lc($char->{inventory}, 'name', $item);
-	return 0 if $index eq '';
-	return 0 unless $char->{inventory}[$index]{amount} >= $quantity;
-	return 1;
+	return if $index eq '';
+	return unless $char->{inventory}[$index]{amount} >= $quantity;
+	return $index;
 }
 
 ##
